--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>MedicApp - Medical & Hospital React/Redux admin template</title>
+    <title>DentistApp - Gestión de consultorio odontológico</title>
   </head>
 
   <body>
@@ -32,7 +32,7 @@
       <div class="loader-box" style="display: none;">
         <div class="bounceball"></div>
         <div class="text">
-          Medic
+          Dentist
           <span>app</span>
         </div>
       </div>
